Загрузил проект с д/з по третьей и четвертой теме

--- a/my_project/src/index.html
+++ b/my_project/src/index.html
@@ -13,6 +13,8 @@
 
 
 	<title>Дима Скорпи - Веб-разработчик</title>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -20,7 +22,8 @@
     <header>
     	<nav>
     		<div class="logo">Дима Скорпи</div> 
-    		<div class="menu"><ul>
+    		<div class="menu">
+    			<ul>
     			<li>Обо мне</li>
     			<li>Услуги</li>
     			<li>Кейсы</li>
